<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corners"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="5dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="5dp"
    android:elevation="5dp">

    <TextView
        android:id="@+id/tv_titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/namecolon"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"></TextView>

    <TextView
        android:id="@+id/tv_nameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_titleName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/textsize"
        android:textColor="@color/black"></TextView>


    <TextView
        android:id="@+id/tv_titleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameValue"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/emailcolon"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"></TextView>

    <TextView
        android:id="@+id/tv_emailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_titleEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_titleEmail"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/textsize"
        android:textColor="@color/black"></TextView>

    <TextView
        android:id="@+id/tv_titlePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailValue"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/phonecolon"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"></TextView>

    <TextView
        android:id="@+id/tv_phoneValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_titlePhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_titlePhone"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/textsize"
        android:textColor="@color/black"></TextView>


    <TextView
        android:id="@+id/tv_titleGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phoneValue"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/gendercolon"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"></TextView>

    <TextView
        android:id="@+id/tv_genderValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_titleGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_titleGender"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/textsize"
        android:textColor="@color/black"></TextView>



    <TextView
        android:id="@+id/tv_titleCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genderValue"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/citycolon"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"></TextView>

    <TextView
        android:id="@+id/tv_cityValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_titleCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_titleCity"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/textsize"
        android:textColor="@color/black"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>